force-app/main/default/objects/LoyaltyProgramMember/LoyaltyProgramMember.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>