force-app/main/default/objects/LoyaltyProgramMember/fields/Apple_Wallet_Link__c.field-meta.xml
<CustomField>
    <fullName>Apple_Wallet_Link__c</fullName>
    <description>Link to digital wallet to add to Apple Wallet app on iOS devices</description>
    <label>Apple Wallet Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>