force-app/main/default/objects/LoyaltyProgramMember/fields/Birth_Day__c.field-meta.xml
<CustomField>
    <fullName>Birth_Day__c</fullName>
    <description>Day of Member&apos;s Birthday. Must be between 1-31</description>
    <formula>DAY(Contact.Birthdate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birth Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>