force-app/main/default/objects/LoyaltyProgramMember/fields/Birth_Month__c.field-meta.xml
<CustomField>
    <fullName>Birth_Month__c</fullName>
    <description>Month of Member&apos;s Birthday. Must be between 1-12</description>
    <formula>MONTH(Contact.Birthdate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birth Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>