force-app/main/default/objects/LoyaltyProgramMember/fields/CIM_Id__c.field-meta.xml
<CustomField>
    <fullName>CIM_Id__c</fullName>
    <formula>Contact.CIM_Customer_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CIM Id</label>
    <type>Text</type>
</CustomField>