force-app/main/default/objects/LoyaltyProgramMember/fields/Current_Status_Points__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_Points__c</fullName>
    <description>Formula field to show Status Points as read-only on layout to avoid users overriding Status Points</description>
    <formula>Status_Points__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Status Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>