force-app/main/default/objects/LoyaltyProgramMember/fields/CustomerSecret__c.field-meta.xml
<CustomField>
    <fullName>CustomerSecret__c</fullName>
    <label>CustomerSecret</label>
    <type>TextArea</type>
</CustomField>