force-app/main/default/objects/LoyaltyProgramMember/fields/Enrollment_Brand__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Brand__c</fullName>
    <label>Enrollment Brand</label>
    <length>80</length>
    <type>Text</type>
</CustomField>