force-app/main/default/objects/LoyaltyProgramMember/fields/Google_Wallet_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Wallet_Link__c</fullName>
    <description>Link to digital wallet to add to Google Wallet app on Android devices</description>
    <label>Google Wallet Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>