force-app/main/default/objects/LoyaltyProgramMember/fields/Is_Birthday_JobToday__c.field-meta.xml
<CustomField>
    <fullName>Is_Birthday_JobToday__c</fullName>
    <description>Flag to indicate if member&apos;s birthday is today based on Birth Day and Month combination.</description>
    <formula>IF(
AND(
  MONTH(Contact.Birthdate) = MONTH(TODAY()),
  DAY(Contact.Birthdate)   = DAY(TODAY())
), true,

IF(
AND(
  MONTH(Contact.Birthdate) = 2,
  DAY(Contact.Birthdate) = 29,
  DAY(Today())=28,
  MONTH(Today())=2
), true, false
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Birthday Job Today</label>
    <type>Checkbox</type>
</CustomField>