force-app/main/default/objects/LoyaltyProgramMember/fields/Legacy_Tier__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Tier__c</fullName>
    <description>Member tier migrated from legacy system</description>
    <label>Legacy Tier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>