force-app/main/default/objects/LoyaltyProgramMember/fields/Lifetime_Points__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Points__c</fullName>
    <label>Lifetime Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>