force-app/main/default/objects/LoyaltyProgramMember/fields/Migration_Run_No__c.field-meta.xml
<CustomField>
    <fullName>Migration_Run_No__c</fullName>
    <label>Migration Run No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>