force-app/main/default/objects/LoyaltyProgramMember/fields/Retry_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Retry_Wallet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retry Wallet</label>
    <type>Checkbox</type>
</CustomField>