force-app/main/default/objects/LoyaltyProgramMember/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether member signed up as a staff or not</description>
    <label>Staff</label>
    <type>Checkbox</type>
</CustomField>