force-app/main/default/objects/LoyaltyProgramMember/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State where member has enrolled in Loyalty program</description>
    <label>Enrollment State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>