force-app/main/default/objects/LoyaltyProgramMember/fields/Status_Points__c.field-meta.xml
<CustomField>
    <fullName>Status_Points__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Running balance of points earned so far. This value can be negative.</description>
    <inlineHelpText>Running balance of points earned so far. This value can be negative.</inlineHelpText>
    <label>Status Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>