force-app/main/default/objects/LoyaltyProgramMember/fields/Total_Rewards__c.field-meta.xml
<CustomField>
    <fullName>Total_Rewards__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Rolled up fields to calculate total &quot;Issued&quot; vouchers face value</description>
    <label>Total Rewards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>