force-app/main/default/objects/LoyaltyProgramMember/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <description>This is the Salesforce-generated membership sequence number</description>
    <displayFormat>{00000000}</displayFormat>
    <label>Unique ID</label>
    <type>AutoNumber</type>
</CustomField>