force-app/main/default/objects/LoyaltyProgramMember/fields/Voucher_Points__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Points__c</fullName>
    <description>Points to next voucher</description>
    <formula>$Setup.Organisation_Settings__c.Voucher_Points_Target_Value__c - Status_Points__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Points to next voucher</inlineHelpText>
    <label>Voucher Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>