force-app/main/default/objects/LoyaltyProgramMember/fields/WalletUpdate__c.field-meta.xml
<CustomField>
    <fullName>WalletUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WalletUpdate</label>
    <type>Checkbox</type>
</CustomField>