force-app/main/default/objects/LoyaltyProgramMember/listViews/All_Members_AU.listView-meta.xml
<ListView>
    <fullName>All_Members_AU</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Contact</columns>
    <columns>MemberStatus</columns>
    <columns>EnrollmentDate</columns>
    <columns>MemberType</columns>
    <columns>Program</columns>
    <columns>LastActivityDate</columns>
    <columns>MembershipEndDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EnrollmentChannel</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>All Members - AU</label>
</ListView>